*FIXED - Wrapped info box in window.load function
Fall back CSS width 50% height 80%
Should be suitable.

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ a {
 .info-block {
   background: black;
   margin: 0 auto;
-  width: 80%;
+  width: 50%;
   height: 80%;
   color: white;
   position: relative;
